--- a/lib/android/app/build.gradle
+++ b/lib/android/app/build.gradle
@@ -13,6 +13,7 @@ def DEFAULT_MIN_SDK_VERSION = 21
 def DEFAULT_KOTLIN_VERSION = "1.3.61"
 def DEFAULT_KOTLIN_STDLIB_VERSION = "kotlin-stdlib-jdk8"
 def DEFAULT_FIREBASE_MESSAGING_VERSION = "21.1.0"
+def DEFAULT_HUAWEI_MESSAGING_VERSION = "5.1.1.301"
 
 def androidSdkVersion = safeExtGet('androidSdkVersion', DEFAULT_COMPILE_SDK_VERSION)
 def androidMinSdkVersion = safeExtGet('androidMinSdkVersion', DEFAULT_MIN_SDK_VERSION)
@@ -20,6 +21,7 @@ def androidTargetSdkVersion = safeExtGet('targetSdkVersion', DEFAULT_COMPILE_SDK
 def kotlinVersion = safeExtGet('kotlinVersion', DEFAULT_KOTLIN_VERSION)
 def kotlinStdlib = safeExtGet('kotlinStdlib', DEFAULT_KOTLIN_STDLIB_VERSION)
 def firebaseVersion = safeExtGet('firebaseVersion', DEFAULT_FIREBASE_MESSAGING_VERSION)
+def huaweiVersion = safeExtGet('huaweiVersion', DEFAULT_HUAWEI_MESSAGING_VERSION)
 
 Object findReactNativePackageJson() {
     def searchPath = 'node_modules/react-native/package.json'
@@ -117,7 +119,7 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:$kotlinStdlib:$kotlinVersion"
     googleImplementation "com.google.firebase:firebase-messaging:$firebaseVersion"
-    huaweiImplementation 'com.huawei.hms:push:5.1.1.301'
+    huaweiImplementation "com.huawei.hms:push:$huaweiVersion"
 
     implementation 'com.facebook.react:react-native:+'
     // tests
